<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="117dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="100dp"
        android:text="@string/ratetext"
        android:textColor="#000000"
        android:textSize="31sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:background="#000000"
        android:contentDescription="@string/rating"
        android:max="5"
        android:numStars="5"
        android:stepSize="1"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:background="#FF7043"
        android:text="@string/submit"
        android:textColor="#263238" />


</RelativeLayout>